--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,14 @@
 .app {
   position: relative;
 }
+
+.address {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  z-index: 1;
+  font-size: 2rem;
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 10px;
+}
