--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,16 +1,17 @@
 .card {
-  padding: 20px;
+  padding: 2rem;
   background-color: #fff;
   border-radius: 10px;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin-right: 1.5rem;
+  margin-bottom: 1.5rem;
   text-align: center;
+  min-width: 6rem;
 }
 
 .dayName {
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .temp {
-  font-weight: bold;
+  font-weight: 700;
 }
